Limpiar y comentar código